--- a/html/index.html
+++ b/html/index.html
@@ -182,7 +182,7 @@
     }
 }
 
-// Run the function after the page is fully loaded
+// Run the function after the page is fully loadeda
 window.onload = function() {
     console.log("Page Loaded");
     updateVisitorCounter();
