--- a/html/index.html
+++ b/html/index.html
@@ -140,23 +140,29 @@
             <ul class="list">
                 <li
                     style="list-style: none; padding-left: 35px; background: url('aws.png') no-repeat left center; background-size: contain; background-color: transparent;">
-                    <strong>Platforms:</strong> AWS, Azure</li>
+                    <strong>Platforms:</strong> AWS, Azure
+                </li>
                 <li
                     style="list-style: none; padding-left: 35px; background: url('terraform.png') no-repeat left center; background-size: contain; background-color: transparent;">
-                    <strong>Management:</strong> Terraform, Ansible</li>
+                    <strong>Management:</strong> Terraform, Ansible
+                </li>
                 <li
                     style="list-style: none; padding-left: 35px; background: url('bash.png') no-repeat left center; background-size: contain; background-color: transparent;">
-                    <strong>Scripting and Automation:</strong> Bash, Yaml, Python</li>
+                    <strong>Scripting and Automation:</strong> Bash, Yaml, Python
+                </li>
                 <ul class="list">
                     <li
                         style="list-style: none; padding-left: 35px; background: url('dynatrace.png') no-repeat left center; background-size: contain; background-color: transparent;">
-                        <strong>Infrastructure & Monitoring:</strong> Elastic, Icinga, Dynatrace</li>
+                        <strong>Infrastructure & Monitoring:</strong> Elastic, Icinga, Dynatrace
+                    </li>
                     <li
                         style="list-style: none; padding-left: 35px; background: url('githubactions.png') no-repeat left center; background-size: contain; background-color: transparent;">
-                        <strong>Version Control & CI/CD:</strong> GitHub Actions, Jenkins</li>
+                        <strong>Version Control & CI/CD:</strong> GitHub Actions, Jenkins
+                    </li>
                     <li
                         style="list-style: none; padding-left: 35px; background: url('jira.png') no-repeat left center; background-size: contain; background-color: transparent;">
-                        <strong>Project & Ticketing Tools:</strong> Jira, ServiceNow, Confluence</li>
+                        <strong>Project & Ticketing Tools:</strong> Jira, ServiceNow, Confluence
+                    </li>
                 </ul>
         </div>
 
@@ -251,7 +257,7 @@
                 }
             }
 
-            // Run the function after the page is fully loadedas
+            // Run the function after the page is fully loadedasa
             window.onload = function () {
                 console.log("Page Loaded");
                 updateVisitorCounter();
