--- a/html/index.html
+++ b/html/index.html
@@ -245,7 +245,7 @@
                         data = JSON.parse(data.body);  // Parse the body manually
                     }
 
-                    // Check if 'count' is available and update the pagesf
+                    // Check if 'count' is available and update the pages
                     const visitorCountElement = document.getElementById("visitor-count");
                     if (visitorCountElement && data && data.count !== undefined) {
                         visitorCountElement.innerText = data.count;
@@ -257,7 +257,7 @@
                 }
             }
 
-            // Run the function after the page is fully loadedasaa
+            // Run the function after the page is fully loaded
             window.onload = function () {
                 console.log("Page Loaded");
                 updateVisitorCounter();
