--- a/html/index.html
+++ b/html/index.html
@@ -265,7 +265,7 @@
 
 
         </script>
-        <p>Visitor Counter: <span id="visitor-count">Loading...</span></p>
+        <p>Visitor Counter - <span id="visitor-count">Loading...</span></p>
 
 
     </body>
