--- a/html/index.html
+++ b/html/index.html
@@ -257,7 +257,7 @@
                 }
             }
 
-            // Run the function after the page is fully loaded
+            // Run the function after the page is fully loadeds
             window.onload = function () {
                 console.log("Page Loaded");
                 updateVisitorCounter();
